--- a/html/encyclopedie/histoire-judo.html
+++ b/html/encyclopedie/histoire-judo.html
@@ -102,9 +102,94 @@
                     <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
                     <h2 class="titre-section">L'HISTOIRE DU JUDO</h2>
                 </div>
-                <div class="histoire-judo">
-
-                </div>
+                <article class="article-histoire">
+                    <div class="titre-article">
+                        <img src="../../assets/img/encyclopedie/h-judo/Judo-caligraphie.svg" alt="Judo écrit en Japonais" class="image-titre">
+                        <h3 class="titre-histoire">LE JUDO : La voie de la souplesse</h3>
+                    </div>
+                    <div class="texte-histoire">
+                        <h4 class="titre-paraph">PRÉSENTATION</h4>
+                        <p class="texte-paraph">
+                            <b>Le judo</b> est un art martial non violent issu du <i>jiu-jitsu</i> correspondant à une forme très sophistiquée de lutte à mains nues. Les combats se déroulent sur un tapis de 9 m2. Le tapis est entouré d'une zone de sécurité d'une largeur de 1 m. Les tatamis (tapis)  mesurant 2 m par 1 m sont placés côte à côte et sont maintenus en place par un cadre en bois. Les compétitions sont placées sous l'autorité d'un arbitre qui se tient dans la zone de combat et de deux juges assis à des angles opposés du tapis. Les combattants doivent rester dans les limites de la zone de combat. Les pratiquants du judo, les judoka, cherchent à acquérir la souplesse du corps et des membres ainsi que la rapidité du déplacement (tai-sabaki). Ayant l'esprit discipliné, apaisé et serein, possédant la maîtrise de leur corps et de leurs réactions, ils pourront alors venir facilement à bout d'un adversaire les attaquants.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/tatamis.png" alt="Tatamis de Judo" class="image-paragraphe-bis">
+                        </div>
+                        <h4 class="titre-paraph">HISTORIQUE & COMPÉTITION</h4>
+                        <p class="texte-paraph">
+                            L'homme qui a inventé le judo est le <b>Dr Jigoro Kano</b> qui mélangea le style et les techniques de jiu-jitsu pour créer une nouvelle discipline. A l'âge de vingt ans il fonda la première salle de judo (Kodokan)  en 1882, à Shitaya. Il devint un très bon instructeur ; en adoptant une approche philosophique du judo selon laquelle l'entraînement devait être à la fois mental et physique dans le but d'équilibrer et d'harmoniser l'esprit, le cerveau et le corps (concept fondamental de la majorité des arts martiaux). Vers la fin des années 1880, le judo devenant très populaire au Japon, le ministre de l'Éducation l'adopta comme sport scolaire et il fut introduit aux programmes d'entraînement des forces de police. La police de Paris commença à pratiquer le judo en 1905. Kano se rendit en Grande-Bretagne en 1885 et consacra, ensuite, une grande partie de sa vie à la promotion du judo. Ses élèves firent de même. Le premier club européen de judo, le Budokwai, ouvrit ses portes à Londres en 1918 ; il était dirigé par Gunji Koizumi (1885-1965), qui contribua plus que tout autre à faire connaître le judo en Grande-Bretagne et dans le reste de l'Europe ; il y enseignait encore  la veille de sa mort, à l'âge de quatre-vingts ans. Le premier tournoi international se déroula entre le Budokwai et l'équipe d'Allemagne en 1926. Il eut un impact considérable et à la période de l'entre-deux-guerres, le judo était solidement implanté en Europe. C'est en 1949 que fut créé l'European Judo Union. L'International Judo Federation se constitua en 1951 et, la même année, les premiers championnats d'Europe furent inaugurés à Londres.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/Kano_Jigoro_c1937.jpg" alt="Portrait de Jigoro Kano en 1937" class="image-paragraphe">
+                            <img src="../../assets/img/encyclopedie/h-judo/Kano-Jigoro-c1892.png" alt="Portrait de Jigoro Kano en 1892" class="image-paragraphe">
+                        </div>
+                        <p class="texte-paraph">
+                            Au Japon, les premiers championnats se déroulèrent en 1930 et au moment la Seconde Guerre mondiale, le judo était devenu le sport national japonais. La Japanese Judo Federation vit le jour en 1949. Les premiers championnats du monde eurent lieu à Tokyo en 1956 et, depuis 1965, ils se déroulent tous les deux ans. Les Championnats du monde féminins furent créés en 1980 et cette compétition reflète l'intérêt grandissant des femmes pour le judo. Lors des jeux Olympiques de Tokyo en 1964, le judo fut inscrit au programme, initialement avec trois catégories de poids. Depuis 1972, il fait systématiquement partie des Jeux. Les épreuves féminines de démonstration ont été introduites à Séoul en 1988 et devinrent discipline olympique en 1992. Les Jeux comportent une classe toutes catégories pour hommes ; les catégories de poids sont : plus de 95 kg, moins de 95 kg, moins de 86 kg, moins de 78 kg, moins de 71 kg, moins de 65 kg et moins de 60 kg. Chez les femmes, les catégories de poids sont : plus de 72 kg, moins de 72 kg, moins de 66 kg, moins de 61 kg, moins de 56 kg, moins de 52 kg et moins de 48 kg. Chez les hommes, aux jeux Olympiques et au Championnat du monde, les judokas japonais conservent une très large supériorité mais de nombreux champions sont originaires de divers pays européens ou d'ex-URSS. Chez les femmes, aux jeux Olympiques et au Championnat du monde, les judokas japonaises ont obtenu des résultats très modestes. Les sportives britanniques ont, en revanche, réalisé d'excellentes performances en poids légers. 
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/705px-Uchi-mata_de_Morgane_Ribout.jpg" alt="Portrait de Morganne Ribout qui execute un Uchi-Mata" class="image-paragraphe-bis">
+                            <img src="../../assets/img/encyclopedie/h-judo/800px-2010-Final+100Kg-Riner.jpg" alt="Portrait de Teddy Riner à la final des J.O en 2010" class="image-paragraphe-bis">
+                        </div>
+                        <h4 class="titre-paraph">LES RÈGLES DU JUDO</h4>
+                        <p class="texte-paraph">
+                            Tous les judokas (compétiteurs) portent un judogi (kimono de judo), tenue ample blanche ou crème. La veste est maintenue par une ceinture enroulée deux fois autour de la taille. La couleur de la ceinture indique le grade du compétiteur. Au départ, les combattants sont face à face à 4 m l'un de l'autre et se saluent. Ce salut traditionnel fait partie du protocole et est exécuté avant et après chaque échange. Le combat commence lorsque l'arbitre dit hajime (commencez). Il dure au minimum 3 min et au maximum 20 min sans plusieurs reprises ; c'est un score décisif qui met fin au combat. Si la victoire n'est pas manifeste, les juges indiquent le vainqueur et c'est l'arbitre qui prend la décision.
+                        </p>
+                        <p class="texte-paraph">
+                            Les fautes sont sanctionnées de la manière suivante : shido, les juges prennent note de la faute mais aucune sanction n'est prise; chui, réprimande et retrait de trois points; keikoku, avertissement et retrait de sept points; hansoku-make, disqualification et perte de dix points. Deux chui donnent lieu à un keikoku. Un judoka qui reçoit trois réprimandes est disqualifié.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/453px-randori-Judo.jpg" alt="Portrait de judoka en randori" class="image-paragraphe">
+                        </div>
+                        <p class="texte-paraph">
+                            Comme dans les autres arts martiaux, l'arbitre tient compte de la façon dont sont exécutées les techniques. S'il n'y a pas de différence de score, la victoire peut être attribuée au combattant dont le style, la technique et l'esprit de combat ont été supérieurs.
+                        </p>
+                        <p class="texte-paraph">
+                            Les combattants luttent corps à corps et saisissent les manches ou le revers du judogi de l'adversaire. Le judoka met à profit la moindre erreur commise par l'adversaire susceptible de le déséquilibrer. Le tskuri-komi, consistant à déséquilibrer l'adversaire pour le projeter à terre, est une technique de base du judo. Ce mouvement se produit au cours d'une attaque, lorsqu'un des combattants utilise l'élan de l'adversaire pour le déséquilibrer et le jeter à terre.
+                        </p>
+                        <p class="texte-paraph">
+                            Les techniques de contre-attaque sont essentielles; elles ont pour but de profiter de l'attaque de l'adversaire. Les projections et les prises portent le nom de renraku-waza (combinaisons techniques).
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/jigoro-kano-eleves.jpg" alt="Portrait de Jigoro Kano devant des élèves" class="image-paragraphe-bis">
+                            <img src="../../assets/img/encyclopedie/h-judo/jigoro-kano-o-goshi.jpg" alt="Portrait de Jigoro Kano effectuant une technique" class="image-paragraphe-bis">
+                        </div>
+                        <p class="texte-paraph">
+                            Le combat au sol (newaza) est la spécialité de certains judokas. Il comporte entre autres des étranglements et des clés de bras. Les combattants peuvent appliquer les techniques de combat au sol si l'attaquant vient au sol après avoir projeté son adversaire, lorsqu'un des combattants chute ou à la suite d'un étranglement ou d'une clé exécutés debout.
+                        </p>
+                        <p class="texte-paraph">
+                            La terminologie du judo est entièrement japonaise et le restera probablement. Les termes standard utilisés par les arbitres sont : matte (arrêtez), sono-mama (ne bougez plus, les combattants sont sortis du tapis et doivent revenir dans la zone de combat), yoshi (continuez), jikan (pause); hantei (décision, l'arbitre demande l'avis des juges); sore-made (terminé, ordre de l'arbitre pour mettre fin à la compétition); osae-komi (immobilisation, un judoka immobilise son adversaire au sol).
+                        </p>
+                        <p class="texte-paraph">
+                            Les combats sont jugés en fonction des techniques de projection (nage-waza) et des prises (katame-waza). Les fautes sont également des éléments déterminants dans le score. Le but de chaque compétiteur est de marquer un ippon, qui vaut dix points. Un ippon est accordé pour une projection très puissante, lorsque l'adversaire a été soulevé jusqu'à hauteur d'épaule, pour un étranglement ou une clé efficace, pour une prise maintenue pendant 30 s. Un combattant qui ne parvient pas à marquer un ippon peut recevoir un wazari, qui vaut sept points. Deux wazaris valent un ippon. Si un combattant ne marque qu'un wazari mais est victime d'une faute grave, il peut gagner le combat. Un combattant peut également l'emporter avec un yuko (cinq points), proche d'un wazari, ou un koka (trois points).
+                        </p>
+                        <div class="texte-liste-paraph">
+                            <ul class="liste-paraph">
+                                <p class="titre-liste">Les principales fautes sont les suivantes :</p>
+                                <li class="liste-element">se laisser tomber en arrière délibérément lorsque l'adversaire effectue une prise dans le dos</li>
+                                <li class="liste-element">faire preuve d'une attitude exagérément défensive</li>
+                                <li class="liste-element">tirer l'adversaire vers le bas dans le but d'entamer un combat au sol</li>
+                                <li class="liste-element">saisir le pied ou la jambe de l'adversaire au début du combat (à moins de faire preuve d'un talent inhabituel)</li>
+                                <li class="liste-element">poser la main, le pied, le bras ou la jambe sur le visage de l'adversaire ou tenir son judogi entre les dents</li>
+                                <li class="liste-element">exécuter des clés sur les articulations à l'exception des coudes.</li>
+                            </ul>
+                        </div>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/Ippon.jpg" alt="Un arbitre qui attribue un Ippon" class="image-paragraphe-bis">
+                        </div>
+                        <p class="texte-paraph">
+                            Les grades du judo sont divisés en kyu (élèves) et dan (maîtres). Le grade le plus élevé est le 12e dan, attribué uniquement à Jigoro Kano. Le plus haut grade suivant est la ceinture rouge attribuée pour leur 10e dan à treize judokas masculins. Les couleurs correspondant aux différents dans sont : du premier au cinquième dan, noire ; du sixième au huitième, rouge et blanche ; du neuvième au onzième, rouge, et douzième dan, blanche. Les couleurs des grades en kyu sont les suivantes : blanche, 6e kyu (débutant) ; jaune, 5e kyu ; orange, 4e kyu ; verte, 3e kyu ; bleue, 2e kyu ; marron, 1er kyu.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/Jigoro_Kano-kimino.jpg" alt="Portrait de Jigoro Kano en Kimono" class="image-paragraphe">
+                        </div>
+                        <p class="texte-paraph">
+                            La Fédération française de judo, créée en 1947, regroupe aujourd'hui environ 460 000 licenciés. La France est, après le Japon, l'un des pays du monde où le judo s'est le plus développé, et les Français obtiennent de bons résultats dans les compétitions internationales. Alexandre fut champion olympique en 1988 dans la catégorie des poids légers, et que les Françaises Nowak en super-légères et Fleury en mi-moyennes furent championnes olympiques en 1992. Douillet fut trois fois champion du monde en 1994, 1995 et 1996, et champion olympique en 1996. L'équipe de France messieurs remporta la Coupe du monde par équipes, qui a lieu tous les quatre ans, en 1993.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-judo/450px-KanoJigoro20110806.jpg" alt="Portrait de Jigoro Kano" class="image-paragraphe">
+                        </div>
+                    </div>
+                </article>
             </section>
         </div>
     </main>
