--- a/html/encyclopedie/histoire-club.html
+++ b/html/encyclopedie/histoire-club.html
@@ -102,9 +102,80 @@
                     <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
                     <h2 class="titre-section">L'HISTOIRE DU CLUB</h2>
                 </div>
-                <div class="histoire-club">
-
-                </div>
+                <article class="article-histoire">
+                    <div class="titre-article">
+                        <img src="../../assets/img/encyclopedie/h-judo/Judo-caligraphie.svg" alt="Judo écrit en Japonais" class="image-titre">
+                        <h3 class="titre-histoire">JCF : JUDO-CLUB FÉNÉTRANGE</h3>
+                    </div>
+                    <div class="texte-histoire">
+                        <h4 class="titre-paraph">1983 : Fondation du Judo-Club de FÉNÉTRANGE</h4>
+                        <p class="texte-paraph">
+                            En Juin 1983, suite à la demande de jeunes filles de Fénétrange, Béatrice Biraud, alors Adjointe au Maire, décide de rechercher une activité sportive complète, convenant à tous, y compris les jeunes filles. Après consultations auprès de différents organismes agréés, elle choisit de mettre en place un  Club de Judo, épaulée par son conjoint Louis Pierre, habitué d'œuvrer au sein des associations de jeunesse, qui accepte d'en prendre la présidence.
+                        </p>
+                        <p class="texte-paraph">
+                            Un comité est alors constitué, le Judo Club de Fenetrange est né!
+                        </p>
+                        <p class="texte-paraph">
+                            La première Assemblée générale se tient le 29 Juin 1983
+                        </p>
+                        <div class="texte-liste-paraph">
+                            <ul class="liste-paraph">
+                                <p class="titre-liste">Plusieurs membres de ce premier comité sont d'ailleurs encore en place aujourd’hui dont :</p>
+                                <li class="liste-element">Germaine LEDIG</li>
+                                <li class="liste-element">Francine REIN</li>
+                                <li class="liste-element">Jean Claude HUGUENEL</li>
+                                <li class="liste-element">Louis-Pierre BIRAUD </li>
+                            </ul>
+                        </div>
+                        <p class="texte-paraph">
+                            Les Statuts du Club sont enregistrés au Tribunal de Sarrebourg le 21 Novembre 1983.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-club/photo-num-1.jpg" alt="Portrait des 3 memebres fondateurs du Judo-Club" class="image-paragraphe">
+                        </div>
+                        <h4 class="titre-paraph">Naissance du Club</h4>
+                        <p class="texte-paraph">
+                            Les Démarches sont entreprises auprès de la Fédération Française de Judo. Le Club obtiendra  son adhésion le 1er Mars 1984 sous le n° 2557374.
+                        </p>
+                        <p class="texte-paraph">
+                            La demande d’agrément est  faite auprès de la direction départementale de Jeunesse et Sports. L’agrément sera obtenu le 13 Octobre 1986 sous le n° 57 86 40.
+                        </p>
+                        <p class="texte-paraph">
+                            Avant de démarrer la première saison, le Club se met en quête d'un tatami, élèment indispensable à son démarrage. Comme tout Club en formation, les caisses sont encore vides et le Conseil Général ne subventionne que sur présentation de factures. 20000 Francs sont nécessaires à l'acquisition de ce "matériel" de base.
+                        </p>
+                        <p class="texte-paraph">
+                            La Musique Municipale, (dont la trésorière est Mme BIRAUD) se propose d'avancer cette somme, qui a été remboursée dès les premières saisons.
+                        </p>
+                        <p class="texte-paraph">
+                            Le Judo Club peut alors commencer ses activités. En Novembre 1983, on compte 24 licenciés, comité inclus!
+                        </p>
+                        <p class="texte-paraph">
+                            C'est John GIRARD, du Judo Club de Sarrebourg, qui dirigera les premiers entraînements. Il sera très vite secondé par un jeune judoka sarrebourgeois, heureux de pouvoir transmettre un enseignement technique acquis grâce à sa ceinture noire 2ème Dan : Damien DIEDAT. Fidèle au Club et à la qualité de son enseignement, il est encore, en 2010, son entraîneur officiel.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-club/photo-num-1.jpg" alt="Portrait des 3 memebres fondateurs du Judo-Club" class="image-paragraphe-bis">
+                        </div>
+                        <h4 class="titre-paraph">Évolution du Club</h4>
+                        <p class="texte-paraph">
+                            Promis par tous à un échec à court terme (un Club de Judo étant déjà en place à Mittersheim) le Judo Club a un démarrage difficile. Mais le Comité tient bon et persiste, malgré  le nombre de licenciés (64 et 50 licenciés les saisons suivantes).
+                        </p>
+                        <p class="texte-paraph">
+                            Mais le Comité y croit, et les licenciés affluent la quatrième année puisque ce sont 102 judokas qui rejoignent le Club cette année là.
+                        </p>
+                        <p class="texte-paraph">
+                            Très vite le Judo Club ouvrira une section  musculation, dont les activités se déroulaient à l’ancienne laiterie, puis au Château.
+                        </p>
+                        <p class="texte-paraph">
+                            Dès 1987 s’ouvre également une section Aérobic , entraînée par AGATHE PAWLOSKI.
+                        </p>
+                        <p class="texte-paraph">
+                            Puis se sera le tour d’une section  danse moderne, dirigée d’abord par AGATHE, puis par  SYLVIE.
+                        </p>
+                        <div class="img-paraph">
+                            <img src="../../assets/img/encyclopedie/h-club/DamienDiedat.jpg" alt="Portrait de l'entraineur Damien Diedat" class="image-paragraphe">
+                        </div>
+                    </div>
+                </article>
             </section>
         </div>
     </main>
